--- a/ja-words-2/package.json
+++ b/ja-words-2/package.json
@@ -12,9 +12,11 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^13.0.0",
     "element-plus": "^2.9.6",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
