--- a/iptv-v/package.json
+++ b/iptv-v/package.json
@@ -17,6 +17,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "unplugin-auto-import": "^19.1.2",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.0"
   }
 }
