--- a/japanese/lessons.yml
+++ b/japanese/lessons.yml
@@ -1,38 +1,36 @@
 l1:
-  title: >
-    !李(り)さんは　!中国人(ちゅうごくじん)です
-  basic: |
-    > * !李(り)さんは　!中国人(ちゅうごくじん)です。
-    > * !森(もり)さんは　!学生(がくせい)では　ありません。
-    > * !林(はやし)さんは　!日本人(にほんじん)ですか。
-    > * !李(り)さんは　!JC(ジェーシー)!企画(きかく)の　!社員(しゃいん)です。
-  conversation: |
-    * Ａ　甲：!私(わたし)は　!李(り)です。!小野(おの)さんですか。
-    * 　　乙：はい，そうです。!小野(おの)です。
-    * Ｂ　甲：!森(もり)さんは　!学生(がくせい)ですか。
-    * 　　乙：いいえ，!学生(がくせい)では　ありません。!会社員(かいしゃいん)です。
-    * Ｃ　甲：!吉田(よしだ)さんですか。
-    * 　　乙：いいえ，ちがいます。!森(もり)です。
-    * Ｄ　甲：!李(り)さんは　!JC(ジェーシー)!企画(きかく)の　!社員(しゃいん)ですか。
-    * 　　乙：はい，そうです。
+  title: !李(り)さんは　!中国人(ちゅうごくじん)です
+  basic:
+    - !李(り)さんは　!中国人(ちゅうごくじん)です。
+    - !森(もり)さんは　!学生(がくせい)では　ありません。
+    - !林(はやし)さんは　!日本人(にほんじん)ですか。
+    - !李(り)さんは　!JC(ジェーシー)!企画(きかく)の　!社員(しゃいん)です。
+  conversation:
+    A:
+      - 甲：!私(わたし)は　!李(り)です。!小野(おの)さんですか。
+      - 乙：はい，そうです。!小野(おの)です。
+    B:
+      - 甲：!森(もり)さんは　!学生(がくせい)ですか。
+      - 乙：いいえ，!学生(がくせい)では　ありません。!会社員(かいしゃいん)です。
+    C:
+      - 甲：!吉田(よしだ)さんですか。
+      - 乙：いいえ，ちがいます。!森(もり)です。
+    D:
+      - 甲：!李(り)さんは　!JC(ジェーシー)!企画(きかく)の　!社員(しゃいん)ですか。
+      - 乙：はい，そうです。
   title2: "!出迎(でむか)え"
-  conversation2: |
-    * -
-    * -
-    * !李(り)：!JC(ジェーシー)!企画(きかく)の　!小野(おの)さんですか。
-    * !小野(おの)：はい，!小野(おの)です。!李秀麗(りしゅうれい)さんですか。
-    * !李(り)：はい，!李秀麗(りしゅうれい)です。はじめまして。どうぞ　よろしく　お!願(ねが)いします。
-    * !小野(おの)：はじめましで，!小野緑(おのみどり)です。
-
-    ---
-
-    * -
-    * !森(もり)：!李(り)さん，こんにちは。
-    * !李(り)：!吉田(よしだ)さんですか。
-    * !森(もり)：いいえ，!私(わたし)は　!吉田(よしだ)じゃ　ありません。!森(もり)です。
-    * !李(り)：あっ，!森(もり)さんですか。どうも　すみません。
-    * !森(もり)：いいえ，どうぞ　よろしく。
-    * !李(り)：!李秀麗(りしゅうれい)です。こちらこそ，よろしく　お!願(ねが)いします。
+  conversation2:
+    - !李(り)：!JC(ジェーシー)!企画(きかく)の　!小野(おの)さんですか。
+    - !小野(おの)：はい，!小野(おの)です。!李秀麗(りしゅうれい)さんですか。
+    - !李(り)：はい，!李秀麗(りしゅうれい)です。はじめまして。どうぞ　よろしく　お!願(ねが)いします。
+    - !小野(おの)：はじめましで，!小野緑(おのみどり)です。
+    -
+    - !森(もり)：!李(り)さん，こんにちは。
+    - !李(り)：!吉田(よしだ)さんですか。
+    - !森(もり)：いいえ，!私(わたし)は　!吉田(よしだ)じゃ　ありません。!森(もり)です。
+    - !李(り)：あっ，!森(もり)さんですか。どうも　すみません。
+    - !森(もり)：いいえ，どうぞ　よろしく。
+    - !李(り)：!李秀麗(りしゅうれい)です。こちらこそ，よろしく　お!願(ねが)いします。
   basic_translate: |
     > * 小李是中国人。
     > * 森先生不是学生。
@@ -162,7 +160,7 @@ l3:
     * 　　甲：あれは？
     * 　　乙：あれも　!五千八百円(ごせんはっぴゃくえん)です。
   title2: >
-     ホテルの　!周辺(しゅうへん)
+    ホテルの　!周辺(しゅうへん)
   conversation2: |
     * -
     * -
@@ -781,7 +779,7 @@ l10:
     * 　　乙：是个很大的城市，而且很热闹。
     * Ｄ　甲：(最近)东京的天气怎么样?
     * 　　乙：昨天是晴天，不过前天下雨了。
-  title2_translate: 
+  title2_translate:
     美术馆
   conversation2_translate: |
     * 清晨，小李和小野及摄影师长岛一起去附近的美术馆采访。
@@ -1519,7 +1517,7 @@ l19:
     * 　　乙：嗯，可以了。
     * Ｄ　甲：吉田科长在吗?
     * 　　乙：我就是吉田……
-  title2_translate: 
+  title2_translate:
     滑雪
   conversation2_translate: |
     * 　　新潟县的苗场是著名的滑雪场。周末，小野和森邀请小李去滑雪。小李是第一次滑雪。
@@ -1670,7 +1668,7 @@ l21:
     * 　　乙：是啊，因为是连休，先预约的好啊。
     * Ｄ　甲：吃点什么吗?
     * 　　乙：不，睡觉前还是不吃东西的好。
-  title2_translate: 
+  title2_translate:
     歌舞伎
   conversation2_translate: |
     * 　　小李回国的日子临近了。回国前．吉田科长为小李买来观赏歌舞伎的票。为了赶夜场的演出，小李和小野提前离开了公司。
@@ -2049,7 +2047,7 @@ l26:
     * 　乙: 两点结束吧。
     * D 甲: 小马还没来啊？
     * 　乙: 也许今天不来了。
-  title2_translate: 握手和鞠躬　 
+  title2_translate: 握手和鞠躬　
   conversation2_translate: |
     * 在北京分公司上班后，森有机会与主顾杨先生见面了。分公司经理陈梅芳向森介绍了前来拜访的杨先生。森象在日本时一样，向阳先生鞠躬、寒暄。
     * (杨先生被介绍后，做自我介绍)
