--- a/furigana-2/package.json
+++ b/furigana-2/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "furigana",
+  "name": "furigana-2",
   "version": "1.0.0",
-  "description": "标注假名工具",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jp-conversion": "^0.0.7",
-    "kuromoji": "^0.1.2",
     "kuroshiro": "~1.1.2",
     "kuroshiro-analyzer-kuromoji": "^1.1.0"
   }
