--- a/japanese/package.json
+++ b/japanese/package.json
@@ -21,7 +21,7 @@
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
     "unplugin-element-plus": "^0.9.1",
-    "vite": "^6.2.0",
+    "vite": "6.2.6",
     "vue-tsc": "^2.2.4"
   }
 }
