--- a/japanese/package.json
+++ b/japanese/package.json
@@ -15,7 +15,8 @@
     "ky": "^1.8.1",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
