--- a/japanese/package.json
+++ b/japanese/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "dev": "vite --mode dev",
+    "build": "vue-tsc -b && vite build --mode prod && rimraf dist/audio dist/json",
+    "preview": "vite preview --mode prod"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.10.1",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "rimraf": "^6.0.1",
     "typescript": "~5.7.2",
     "unplugin-element-plus": "^0.9.1",
     "vite": "6.2.6",
