--- a/japanese/package.json
+++ b/japanese/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --mode dev",
     "build": "vue-tsc -b && vite build --mode prod && rimraf dist/audio dist/json  dist/unused",
+    "check": "vue-tsc -b",
     "preview": "vite preview --mode prod",
     "format": "prettier --write ."
   },
