--- a/japanese/package.json
+++ b/japanese/package.json
@@ -33,6 +33,7 @@
     "typescript": "~5.7.2",
     "unplugin-element-plus": "^0.9.1",
     "vite": "6.2.6",
-    "vue-tsc": "^2.2.4"
+    "vue-tsc": "^2.2.4",
+    "wrangler": "^4.33.1"
   }
 }
