--- a/japanese/package.json
+++ b/japanese/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
+    "tsx": "^4.20.5",
     "typescript": "~5.7.2",
     "unplugin-element-plus": "^0.9.1",
     "vite": "6.2.6",
