--- a/japanese/.env.prod
+++ b/japanese/.env.prod
@@ -1,2 +1,3 @@
 VITE_AUDIO_BASE=https://jp-audio.chengshen.me
 VITE_JSON_BASE=https://jp-json.chengshen.me
+VITE_IMAGE_BASE=https://jp-image.chengshen.me
