--- a/japanese/.env.prod
+++ b/japanese/.env.prod
@@ -1,3 +1,4 @@
 VITE_AUDIO_BASE=https://jp-audio.chengshen.me
 VITE_JSON_BASE=https://jp-json.chengshen.me
 VITE_IMAGE_BASE=https://jp-image.chengshen.me
+VITE_FAVICON_PATH=https://jp-image.chengshen.me/fav.jpg
