--- a/japanese/package.json
+++ b/japanese/package.json
@@ -19,6 +19,7 @@
     "papaparse": "^5.5.3",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "uuid": "^12.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
