--- a/japanese/tsconfig.json
+++ b/japanese/tsconfig.json
@@ -7,5 +7,9 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext"
+  }
 }
