--- a/japanese/tsconfig.json
+++ b/japanese/tsconfig.json
@@ -10,6 +10,10 @@
   ],
   "compilerOptions": {
     "target": "esnext",
-    "module": "esnext"
+    "module": "esnext",
+    "baseUrl": ".", // 以项目根目录为基准
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
