--- a/japanese/package.json
+++ b/japanese/package.json
@@ -19,6 +19,7 @@
     "papaparse": "^5.5.3",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "unplugin-vue-components": "^29.1.0",
     "uuid": "^12.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
@@ -30,6 +31,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
+    "sass": "^1.93.2",
     "tsx": "^4.20.5",
     "typescript": "~5.7.2",
     "unplugin-element-plus": "^0.9.1",
