--- a/japanese/package.json
+++ b/japanese/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/papaparse": "^5.3.16",
     "@vueuse/core": "^13.0.0",
+    "d3": "^7.9.0",
     "element-plus": "2.11.3",
     "ky": "^1.9.1",
     "papaparse": "^5.5.3",
@@ -25,6 +26,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "eslint-config-prettier": "^10.1.8",
