--- a/japanese/.env.dev
+++ b/japanese/.env.dev
@@ -1,4 +1,5 @@
 VITE_AUDIO_BASE=/audios
 VITE_JSON_BASE=/jsons
+VITE_LESSON_JSON_BASE=/lessons
 VITE_IMAGE_BASE=/images
 VITE_FAVICON_PATH=/images/fav.jpg
