--- a/japanese/.env.dev
+++ b/japanese/.env.dev
@@ -1,5 +1,6 @@
 VITE_AUDIO_BASE=/audios
 VITE_JSON_BASE=/jsons
 VITE_LESSON_JSON_BASE=/lesson-contents
+VITE_LESSON_TRANSLATION_JSON_BASE=/lesson-translations
 VITE_IMAGE_BASE=/images
 VITE_FAVICON_PATH=/images/fav.jpg
