--- a/japanese/.env.prod
+++ b/japanese/.env.prod
@@ -1,5 +1,6 @@
 VITE_AUDIO_BASE=https://jp-audio.chengshen.me
 VITE_JSON_BASE=https://jp-json.chengshen.me
-VITE_LESSON_JSON_BASE=https://jp-lesson.chengshen.me
+VITE_LESSON_JSON_BASE=https://jp-json.chengshen.me/lessons
+VITE_LESSON_TRANSLATION_JSON_BASE=https://jp-json.chengshen.me/translations
 VITE_IMAGE_BASE=https://jp-image.chengshen.me
 VITE_FAVICON_PATH=https://jp-image.chengshen.me/fav.jpg
