--- a/japanese/.env.prod
+++ b/japanese/.env.prod
@@ -1,3 +1,4 @@
+VITE_ENV_TYPE=PROD
 VITE_AUDIO_BASE=https://jp-audio.chengshen.me
 VITE_JSON_BASE=https://jp-json.chengshen.me
 VITE_LESSON_JSON_BASE=https://jp-json.chengshen.me/lessons
