--- a/japanese/package.json
+++ b/japanese/package.json
@@ -12,6 +12,8 @@
     "cf": "npm run build && npx wrangler pages deploy ./dist --project-name=jp --branch=main"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.975.0",
+    "@aws-sdk/lib-storage": "^3.975.0",
     "@types/papaparse": "^5.3.16",
     "@vueuse/core": "^13.0.0",
     "d3": "^7.9.0",
