--- a/japanese/package.json
+++ b/japanese/package.json
@@ -9,7 +9,8 @@
     "check": "vue-tsc -b",
     "preview": "vite preview --mode prod",
     "format": "prettier --write .",
-    "cf": "npm run build && npx wrangler pages deploy ./dist --project-name=jp --branch=main && tsx lesson-process.ts"
+    "upload": "tsx lesson-process.ts",
+    "cf": "npm run build && npx wrangler pages deploy ./dist --project-name=jp --branch=main"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.975.0",
